Added ReinforcementLearning as a new computer opponent.